// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RewardCard should render  1`] = `
<View
  accessibilityLabel="reward-card-container"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="reward-card-container"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "elevation": 3,
          "shadowColor": "#262C2F",
          "shadowOffset": Object {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.1,
        },
        Object {
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "flexDirection": "column",
          "justifyContent": "space-between",
          "paddingBottom": 20,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 20,
        },
        Array [
          Object {
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderTopLeftRadius": 8,
            "borderTopRightRadius": 8,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": 335,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderTopLeftRadius": 8,
            "borderTopRightRadius": 8,
            "height": 160,
            "paddingBottom": 20,
            "paddingLeft": 20,
            "paddingRight": 20,
            "paddingTop": 20,
            "width": "100%",
          },
          Object {
            "backgroundColor": "#FFFFFF",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "space-between",
              "marginLeft": 4,
            }
          }
        >
          <View>
            <Text
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#262C2F",
                    "fontFamily": "SFProDisplay-Heavy",
                    "fontSize": 22,
                  },
                  Object {},
                  undefined,
                ]
              }
            >
              31,500
            </Text>
            <Text
              ellipsizeMode="tail"
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "color": "#909BA0",
                    "fontFamily": "SFProDisplay-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 26,
                  },
                  Object {},
                  undefined,
                ]
              }
            >
              OF 34,999
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "marginTop": 8,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#0066CC",
                    "fontFamily": "SFProDisplay-Bold",
                    "fontSize": 14,
                    "marginRight": 4,
                  },
                  Object {},
                  undefined,
                ]
              }
            >
              Let's go!
            </Text>
            <Text
              accessibilityLabel="icon-text"
              accessible={true}
              allowFontScaling={false}
              selectable={false}
              style={
                Array [
                  Object {
                    "color": "#0066CC",
                    "fontSize": 16,
                  },
                  undefined,
                  Object {
                    "fontFamily": "sywmax",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
              testID="icon-text"
            >
              
            </Text>
          </View>
        </View>
        <View
          style={Object {}}
        >
          <CMIFColorMatrixImageFilter
            matrix={
              Array [
                1,
                0,
                0,
                0,
                0,
                0,
                1,
                0,
                0,
                0,
                0,
                0,
                1,
                0,
                0,
                0,
                0,
                0,
                1,
                0,
              ]
            }
            style={
              Array [
                Object {
                  "backgroundColor": "#fff0",
                },
                undefined,
              ]
            }
          >
            <View />
          </CMIFColorMatrixImageFilter>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`RewardCard should render with specific color and with dark theme 1`] = `
<View
  accessibilityLabel="reward-card-container"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="reward-card-container"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "elevation": 3,
          "shadowColor": "#262C2F",
          "shadowOffset": Object {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.1,
        },
        Object {
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "flexDirection": "column",
          "justifyContent": "space-between",
          "paddingBottom": 20,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 20,
        },
        Array [
          Object {
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderTopLeftRadius": 8,
            "borderTopRightRadius": 8,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": 335,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderTopLeftRadius": 8,
            "borderTopRightRadius": 8,
            "height": 160,
            "paddingBottom": 20,
            "paddingLeft": 20,
            "paddingRight": 20,
            "paddingTop": 20,
            "width": "100%",
          },
          Object {
            "backgroundColor": "#0066CC",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "space-between",
              "marginLeft": 4,
            }
          }
        >
          <View>
            <Text
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#262C2F",
                    "fontFamily": "SFProDisplay-Heavy",
                    "fontSize": 22,
                  },
                  Object {
                    "color": "#FFFFFF",
                  },
                  undefined,
                ]
              }
            >
              31,500
            </Text>
            <Text
              ellipsizeMode="tail"
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "color": "#909BA0",
                    "fontFamily": "SFProDisplay-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 26,
                  },
                  Object {
                    "color": "#FFFFFF",
                  },
                  undefined,
                ]
              }
            >
              OF 34,999
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "marginTop": 8,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#0066CC",
                    "fontFamily": "SFProDisplay-Bold",
                    "fontSize": 14,
                    "marginRight": 4,
                  },
                  Object {
                    "color": "#FFFFFF",
                  },
                  undefined,
                ]
              }
            >
              Let's go!
            </Text>
            <Text
              accessibilityLabel="icon-text"
              accessible={true}
              allowFontScaling={false}
              selectable={false}
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 16,
                  },
                  undefined,
                  Object {
                    "fontFamily": "sywmax",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
              testID="icon-text"
            >
              
            </Text>
          </View>
        </View>
        <View
          style={Object {}}
        >
          <CMIFColorMatrixImageFilter
            matrix={
              Array [
                1,
                0,
                0,
                0,
                0,
                0,
                1,
                0,
                0,
                0,
                0,
                0,
                1,
                0,
                0,
                0,
                0,
                0,
                1,
                0,
              ]
            }
            style={
              Array [
                Object {
                  "backgroundColor": "#fff0",
                },
                undefined,
              ]
            }
          >
            <View />
          </CMIFColorMatrixImageFilter>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`RewardCard should render with specific without color and with dark theme 1`] = `
<View
  accessibilityLabel="reward-card-container"
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  testID="reward-card-container"
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "elevation": 3,
          "shadowColor": "#262C2F",
          "shadowOffset": Object {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.1,
        },
        Object {
          "borderBottomLeftRadius": 8,
          "borderBottomRightRadius": 8,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "flexDirection": "column",
          "justifyContent": "space-between",
          "paddingBottom": 20,
          "paddingLeft": 20,
          "paddingRight": 20,
          "paddingTop": 20,
        },
        Array [
          Object {
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderTopLeftRadius": 8,
            "borderTopRightRadius": 8,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
            "width": 335,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderBottomLeftRadius": 8,
            "borderBottomRightRadius": 8,
            "borderTopLeftRadius": 8,
            "borderTopRightRadius": 8,
            "height": 160,
            "paddingBottom": 20,
            "paddingLeft": 20,
            "paddingRight": 20,
            "paddingTop": 20,
            "width": "100%",
          },
          Object {
            "backgroundColor": "#0066CC",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "flexShrink": 1,
            "justifyContent": "space-between",
          }
        }
      >
        <View
          style={
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "justifyContent": "space-between",
              "marginLeft": 4,
            }
          }
        >
          <View>
            <Text
              ellipsizeMode="tail"
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "color": "#262C2F",
                    "fontFamily": "SFProDisplay-Heavy",
                    "fontSize": 22,
                  },
                  Object {
                    "color": "#FFFFFF",
                  },
                  undefined,
                ]
              }
            >
              31,500
            </Text>
            <Text
              ellipsizeMode="tail"
              numberOfLines={2}
              style={
                Array [
                  Object {
                    "color": "#909BA0",
                    "fontFamily": "SFProDisplay-SemiBold",
                    "fontSize": 16,
                    "lineHeight": 26,
                  },
                  Object {
                    "color": "#FFFFFF",
                  },
                  undefined,
                ]
              }
            >
              OF 34,999
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "marginTop": 8,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#0066CC",
                    "fontFamily": "SFProDisplay-Bold",
                    "fontSize": 14,
                    "marginRight": 4,
                  },
                  Object {
                    "color": "#FFFFFF",
                  },
                  undefined,
                ]
              }
            >
              Let's go!
            </Text>
            <Text
              accessibilityLabel="icon-text"
              accessible={true}
              allowFontScaling={false}
              selectable={false}
              style={
                Array [
                  Object {
                    "color": "#FFFFFF",
                    "fontSize": 16,
                  },
                  undefined,
                  Object {
                    "fontFamily": "sywmax",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
              testID="icon-text"
            >
              
            </Text>
          </View>
        </View>
        <View
          style={Object {}}
        >
          <CMIFColorMatrixImageFilter
            matrix={
              Array [
                1,
                0,
                0,
                0,
                0,
                0,
                1,
                0,
                0,
                0,
                0,
                0,
                1,
                0,
                0,
                0,
                0,
                0,
                1,
                0,
              ]
            }
            style={
              Array [
                Object {
                  "backgroundColor": "#fff0",
                },
                undefined,
              ]
            }
          >
            <View />
          </CMIFColorMatrixImageFilter>
        </View>
      </View>
    </View>
  </View>
</View>
`;
